force-app/main/default/objects/Innovation__c/Innovation__c.object-meta.xml
<CustomObject>
    <label>Innovation</label>
    <nameField>
        <label>Innovation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Innovation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>