force-app/main/default/objects/Innovation__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <label>Fund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>