force-app/main/default/objects/Innovation__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ideation &amp; Idea Generation</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Development &amp;Implementation</fullName>
            </value>
            <value>
                <fullName>Optimization &amp; Scaling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>