force-app/main/default/objects/Innovation__c/validationRules/isEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>isEmpty</fullName>
    <active>false</active>
    <errorConditionFormula>Name  &lt;&gt;  &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name cannot be empty</errorMessage>
</ValidationRule>